<resources>
    <string name="app_name">TestOne</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="start">start</string>
    <string name="text">StarWars</string>
    <string name="desc">New</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="confirm_password" >Confirm password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
</resources>